<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="198dp">

        <View
            android:id="@+id/blackRectangle"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHeight_default="percent" />


        <!-- TextView for the text on top -->
        <ImageView
            android:layout_width="276dp"
            android:layout_height="88dp"
            android:src="@drawable/spinder_logo"
            app:layout_constraintBottom_toBottomOf="@+id/blackRectangle"
            app:layout_constraintEnd_toEndOf="@+id/blackRectangle"
            app:layout_constraintHorizontal_bias="0.076"
            app:layout_constraintStart_toStartOf="@+id/blackRectangle"
            app:layout_constraintTop_toTopOf="@+id/blackRectangle"
            app:layout_constraintVertical_bias="0.877" />



    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/logoRelative"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:background="@color/blacksoft"
        android:padding="24dp">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/custom_edittext"
            android:drawableLeft="@drawable/baseline_person_24"
            android:drawablePadding="8dp"
            android:hint="Username"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_edittext"
            android:drawableLeft="@drawable/baseline_lock_24"
            android:drawablePadding="8dp"
            android:hint="Password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="@color/black"
            android:textColorHighlight="@color/cardview_dark_background" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/black"
            android:text="Login"
            android:textSize="18sp"
            app:cornerRadius="20dp" />
        <Button
            android:id="@+id/signUpButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:backgroundTint="@color/black"
            android:text="Sign Up With Spotify"
            android:textSize="18sp"
            app:cornerRadius="20dp" />
        <Button
            android:id="@+id/signUpGuest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:backgroundTint="@color/black"
            android:text="Sign Up As Guest"
            android:textSize="18sp"
            app:cornerRadius="20dp" />
    </LinearLayout>
</LinearLayout>
